--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "heroicons": "^2.1.5",
     "lucide-react": "^0.454.0",
     "next": "15.0.1",
+    "next-themes": "^0.3.0",
     "radix-ui": "^1.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
