Added backend for adding expends and getting them + security and roles

--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -29,7 +29,7 @@ finance:
 
 
   batch:
-    import-data: false
+    import-data: true
     write-description: false
 
   base-url: http://localhost:8080
