--- a/web/package.json
+++ b/web/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.0.1",
     "next-themes": "^0.3.0",
+    "nuqs": "^2.4.0",
     "radix-ui": "^1.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
